Create HTML structure for product page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!--Task 1-->
+<!DOCTYPE html>
+<head>
+<meta charset="UTF8">
+<meta name = "viewport" content="width=device-width, intial-scale=1.0">
+<title> Store </title>
+</head>
+<body>
+    <h2 id= "Product"> Blue Shirt </h2>  
+    <p id="Product price"> $20 </p>
 
+    <Select id="Select Size">
+        <option value="10" data-stock="in stock"> Small: In stock</option>
+        <option value= "10" data-stock="in stock"> XL: In stock</option>
+    </Select>
+
+    <button id= "purchase-button" disabled>Purchase</button>
+    <script src="main.js"></script>
+</body>
